--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,10 +3,11 @@ set(SOURCES
     big_int.cpp
     big_int_functions.cpp
     number.cpp
+    scanner.cpp
 )
 
 add_executable(tests ${SOURCES})
 target_compile_features(tests PUBLIC cxx_std_20)
 set_target_properties(tests PROPERTIES CXX_EXTENSIONS OFF)
 
-target_link_libraries(tests PRIVATE libabacus fmt::fmt Catch2::Catch2)
+target_link_libraries(tests PRIVATE libabacus libascript fmt::fmt Catch2::Catch2)
