--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,11 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+if(${SANITAZE} STREQUAL "FSAN")
+    add_compile_options("-fsanitize=address")
+    add_link_options("-fsanitize=address")
+    message(${SANITAZE})
+endif()
 
 add_subdirectory(src)
 add_subdirectory(tests)
