--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-if(${SANITAZE} STREQUAL "FSAN")
+if("${SANITAZE}" STREQUAL "FSAN")
     add_compile_options("-fsanitize=address")
     add_link_options("-fsanitize=address")
     message(${SANITAZE})
